--- a/root-src/scss/_spinner.scss
+++ b/root-src/scss/_spinner.scss
@@ -2,28 +2,32 @@
 // http://tobiasahlin.com/spinkit/
 
 .spinner {
-  position: absolute;
-  top: 40px;
+  position: fixed;
+  top: 8em;
   left: 50%;
+  z-index: 100;
   width: 70px;
   margin-left: -35px;
-  text-align: center;
-  @include transition(all 300ms);
+  padding: 20px;
+  text-align: center;  
+  background: rgba(255,255,255,0.8);
+  border-radius: 100px;
+  &.ng-enter,
   &.ng-leave,
   &.ng-move.ng-move-active,
   &.ng-enter.ng-enter-active {
       opacity: 1;
-      @include transform(translateY(0));
+      @include transform(scale(1));
+      @include transition(all 500ms);
   }
   &.ng-leave.ng-leave-active,
-  &.ng-move,
-  &.ng-enter {
+  &.ng-move {
       opacity: 0;
-      @include transform(translateY(3em));
+      @include transform(scale(0.1));
   }
 }
 
-.spinner > div {
+.spinnerRun > div {
   width: 18px;
   height: 18px;
   background-color: #666;
