--- a/root-src/scss/_verbs.scss
+++ b/root-src/scss/_verbs.scss
@@ -88,7 +88,7 @@
                 width: 1.2em;
                 height: 1.2em;
                 margin-top: -0.6em;
-                line-height: 1.2;
+                line-height: 1.1;
                 text-align: center;
                 color: #fff;
                 background-color: darken($color-flag-yellow,20%);
@@ -272,20 +272,7 @@
         white-space: nowrap;
         overflow: hidden;
         line-height: 0;
-        @include transform-origin(0 0);
-        @include transition(all 300ms);
-        &.ng-leave,
-        &.ng-move.ng-move-active,
-        &.ng-enter.ng-enter-active {
-            opacity: 1;
-            @include transform(translateY(0));
-        }
-        &.ng-leave.ng-leave-active,
-        &.ng-move,
-        &.ng-enter {
-            opacity: 0;
-            @include transform(translateY(-3em));
-        }
+        cursor: pointer;
     }
     &Col {
         display: inline-block;
@@ -408,6 +395,12 @@
             -webkit-overflow-scrolling: touch;
             @include transition(all 300ms);
             @include transform-origin(50% -1000px);
+            @include respond-to(sm-min) {
+                top: 30px;
+                width: 700px;
+                height: 370px;
+                margin-left: -350px;
+            }
             &.ng-enter{
                 opacity: 0;
                 @include transform(rotate(10deg) translateY(-200px));
@@ -465,9 +458,21 @@
                 font-size: 12px;
                 text-align: right;
                 text-transform: uppercase;
+                @include respond-to(sm-min) {
+                    margin: 0 0 15px;
+                }
             }
             &Sub {
                 margin: 0 0 1em;
+                @include respond-to(sm-min) {
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 30%;
+                    margin-left: 2%;
+                    &:first-child {
+                        margin-left: 0;
+                    }
+                }
                 &Title {
                     color: #fff;
                     font-size: 12px;
